--- a/config/config.env
+++ b/config/config.env
@@ -1,5 +1,8 @@
-PORT = 3000
-MONGO_URI = mongodb://localhost:27017/blog_db
+PORT = 5000
+
+MONGO_URI_LOCAL = mongodb://localhost:27017/blog_db
+MONGO_URI_ATLAS = mongodb+srv://stalwart:91604731Ss@weblogfullstack.cmdlt.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
 CAPTCHA_SECRET = 6Lcs0Q0aAAAAALquivfJL5eHlrSzs-meZ4YZhe9f
 SESSION_SECRET = BHLXhOEr9pk9
 JWT_SECRET = hV37j4WfWxqz9r2
